# Agora-test

./: .gitignore  Agora_Core.ipynb  LICENSE  PR_DESCRIPTION.md  README.md  YC_APPLICATION_ANSWERS.md  pyproject.toml  test_agora_decorator_colab.ipynb  test_decorator_simple.py
agora/: __init__.py  agora_tracer.py  builder.py  engine.py  inspector.py  instrument.py  instrument_openai.py  registry.py  telemetry.py  tracer.py
examples/: Agora_Parent_Child_telementry.ipynb  STOCK_RESEARCH_README.md  colab_chat_app.py  colab_chat_minimal.py  decorator_demo.py  stock_research_app.py  stock_research_chat.py  stock_research_chat_advanced.py  stock_research_colab.ipynb
examples/Milvus/Rag/: Milvus_RAG_example.ipynb  Milvus_Rag_example.py
examples/simple_chat_app/: simple_chat_app.ipynb  simple_chat_app.py
